--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,13 @@
 Display all of your posts here
 
-<!-- Create the rest of your views in the posts folder -->
+<p><%= link_to 'New Post', new_post_path %></p>
+
+<% @posts.each do |post| %>
+	<li><%= link_to post.bru_name, post_path(post) %> |
+	<%= link_to 'Edit', edit_post_path(post) %> | 
+	<%= link_to 'Delete', post_path(post), 
+		method: :delete, 
+		data: {confirm: 'REALLY NOW, DO YOU WANT TO DELETE THIS??? REALLY??'} 
+	%>
+	</li>
+<%end%>
